--- a/recruit/templates/recruit/filtersearch_major_results.html
+++ b/recruit/templates/recruit/filtersearch_major_results.html
@@ -101,7 +101,7 @@
             </div>
             {% endfor %}
             {% else %}
-            <p class="d-flex justify-content-center" style="margin-top:200px; font-size: 30px; font-weight: bold; font-family: 'Noto Sans';">선택하신 조건에 맞는 모집글이이 없습니다</p>
+            <p class="d-flex justify-content-center" style="margin-top:200px; font-size: 30px; font-weight: bold; font-family: 'Noto Sans';">선택하신 조건에 맞는 모집글이 없습니다</p>
             <a href="{% url 'recruit:recruit_list' %}" class="btn btn-primary" id="none-back">뒤로 가기</a>
             {% endif %}
         </div>
@@ -127,6 +127,7 @@
     </li>
 </div>
 {% endif %}
+<br><br><br><br><br><br><br><br>
 
 <!-- Bootstrap JS and Popper.js (Add Bootstrap JS and Popper.js if needed) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
