delight게시판 수정

--- a/delight/templates/delight/display_data.html
+++ b/delight/templates/delight/display_data.html
@@ -64,7 +64,7 @@
                     <a href="https://delight.duksung.ac.kr/{{ link }}" target="_blank">
                         {% endfor %}
                         <div class="card shadow-sm">
-                            <img src="{% static 'delight/image/smart.png' %}" alt="대체 텍스트">
+                            <img src="{% static 'delight/image/computer.png' %}" alt="대체 텍스트">
                         </div>
                     </a>
                 </div>
@@ -73,7 +73,7 @@
                     <a href="https://delight.duksung.ac.kr/{{ link }}" target="_blank">
                         {% endfor %}
                         <div class="card shadow-sm">
-                            <img src="{% static 'delight/image/gc.png' %}" alt="대체 텍스트">
+                            <img src="{% static 'delight/image/winter.png' %}" alt="대체 텍스트">
                         </div>
                     </a>
                 </div>
@@ -83,7 +83,7 @@
                         <a href="https://delight.duksung.ac.kr/{{ link }}" target="_blank">
                     {% endfor %}
                         <div class="card shadow-sm">
-                            <img src="{% static 'delight/image/coun.png' %}" alt="대체 텍스트">
+                            <img src="{% static 'delight/image/english.png' %}" alt="대체 텍스트">
                         </div>
                     </a>
                 </div>
