--- a/single_page/templates/single_page/main_page.html
+++ b/single_page/templates/single_page/main_page.html
@@ -189,7 +189,11 @@
         <div class="Top-card d-flex">
             <div class="card-body">
                 <div class="d-flex flex-column align-items-center">
+                    {% if user.profile %}
                     <img src="{{ user.profile.image.url }}" class="card-img-rounded rounded-pill ml-2" alt="..." style="width: 120px; height: 120px;">
+                    {% else %}
+                    <img src="{% static 'portfolio/image/duksaeheart.png' %}" class="card-img-rounded rounded-pill ml-2" alt="..." style="width:80px; height:80px">
+                    {% endif %}
                     <div class="user d-flex flex-column text-center" style=" margin-top: 20px;">
                         <p class="card-top-name">{{user.username}} 님</p>
                         <p class="card-top-major">{{ user.college }} | {{user.major}}</p>
@@ -352,36 +356,36 @@
             <div class="col-sm-3">
                 <div class="card d-flex" style="border: 0px ; border-radius: 20px; height: 220px; width: 350px;">
                     <div class="d-flex">
-                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/1129">
-                            <img src="{% static 'delight/image/gc.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
+                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/1179">
+                            <img src="{% static 'delight/image/computer.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
                         </a>
                     </div>
                 </div>
-                <p class="help d-flex justify-content-center mt-3">2023학년도 동계 글로벌챌린저</p>
+                <p class="help d-flex justify-content-center mt-3">2023학년도 컴퓨팅사고 융합경진대회</p>
             </div>
 
             <!-- 다섯 번째 카드 -->
             <div class="col-sm-3">
                 <div class="card d-flex" style="border: 0px ; border-radius: 20px;">
                     <div class="d-flex">
-                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/892">
-                            <img src="{% static 'delight/image/smart.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
+                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/1209">
+                            <img src="{% static 'delight/image/winter.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
                         </a>
                     </div>
                 </div>
-                <p class="help d-flex justify-content-center mt-3">스마트폰 과의존 예방 교육</p>
+                <p class="help d-flex justify-content-center mt-3">2023-동계 커리어 길라잡이 특강</p>
             </div>
 
             <!-- 여섯 번째 카드 -->
             <div class="col-sm-3">
                 <div class="card d-flex" style="border: 0px ; border-radius: 20px;">
                     <div class="d-flex">
-                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/1098">
-                            <img src="{% static 'delight/image/coun.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
+                        <a href="https://delight.duksung.ac.kr//ko/program/all/view/1212">
+                            <img src="{% static 'delight/image/english.png' %}" class="card-img" alt="..." style="border-radius: 20px; max-height: 300px; max-width: 350px; object-fit: cover;">
                         </a>
                     </div>
                 </div>
-                <p class="help d-flex justify-content-center mt-3">심리상담 프로그램</p>
+                <p class="help d-flex justify-content-center mt-3">2023-동계 DS 영어집중프로그램</p>
             </div>
         </div>
         <br><br><br>
